# pgnd-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
backend/: city_location_agent.py  li_weather_agent.py  openai_flight_agent.py  pyai_flight_agent.py  pyai_location_agent.py
backend/google_flight_agent/: agent.py
data/: pg_essays.json
data/chroma_db/: chroma.sqlite3
notebooks/: chroma_test.ipynb  chroma_test.py  utils.py
shared/: data_handler.py  db_handler.py  paths.py
src/core/config/: paths.py
src/core/utils/: data_handler.py  db_handler.py
src/server/: __init__.py
