[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["/README.md"]

[project]
name = "pgnd-agents"
version = "0.1.0"
description="A playground for playing with different agents and frameworks around agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "llama-index-core>=0.12.27",
    "llama-index-llms-openai>=0.3.29",
    "marimo>=0.11.31",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.29",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
]
